# shorthand

./: .travis.yml  Cargo.toml  LICENSE-APACHE  readme.md  rustfmt.toml
from_map/: Cargo.toml
from_map/hashmap_derive/: Cargo.toml
from_map/hashmap_derive/src/: expand.rs  lib.rs
from_map/src/: lib.rs
src/: attributes.rs  error.rs  expand.rs  forward.rs  lib.rs  options.rs  parser.rs  rename.rs  utils.rs  verify.rs  visibility.rs
tests/: clone.rs  const_fn.rs  copy.rs  doc_forward.rs  into.rs  multiple_enable_attr.rs  primitive.rs  progress.rs  rename.rs  rename_disable.rs  strip_option.rs  test_collection_magic.rs  test_copy.rs  test_derive.rs  test_enable_attribute.rs  test_generics.rs  test_into.rs  test_primitive.rs  test_rename_disable.rs  test_rename_get_mut.rs  test_set.rs  test_skip.rs  test_visibility.rs  try_into.rs  version-number.rs  visibility.rs
tests/collections/: btreemap.rs  btreeset.rs  hashmap.rs  hashset.rs  test_hashmap.rs  test_hashset.rs  vec.rs
tests/forward/: forward.rs  parse.rs  parse.stderr
tests/primitive_copy/: option_as_ref.rs  reference.rs  test_array.rs  test_paren.rs  tuple.rs
tests/ui/: clone.rs  clone.stderr  duplicate_enable_enable.stderr  enum.rs  enum.stderr  generic_value_into.stderr  generic_value_try_into.stderr  must_use.rs  must_use.stderr  not_copy.rs  not_copy.stderr  redundant_disable_enable.stderr  shorthand.rs  shorthand.stderr  test_duplicate_disable_enable.stderr  test_duplicate_enable_enable.rs  test_duplicate_enable_enable.stderr  test_enum.stderr  test_generic_value_into.rs  test_generic_value_into.stderr  test_generic_value_try_into.rs  test_generic_value_try_into.stderr  test_must_use.stderr  test_not_const.rs  test_not_copy.stderr  test_redundant_disable_enable.rs  test_redundant_disable_enable.stderr  test_tuple_struct.stderr  test_unexpected_lit.stderr  test_union.rs  test_union.stderr  test_unit_struct.stderr  test_unknown_field.rs  test_unknown_field.stderr  test_unknown_visibility.stderr  tuple_struct.rs  tuple_struct.stderr  unexpected_lit.rs  unexpected_lit.stderr  union.stderr  (+5 more)
tests/ui/rename/: rename_enable.rs  rename_enable.stderr  rename_garbage.stderr  rename_meta_name_value.stderr  rename_not_pair.stderr  rename_pair_unexpected_lit.rs  rename_pair_unexpected_lit.stderr  rename_path.rs  rename_path.stderr  rename_unexpected_lit_type.stderr  rename_verify_format.rs  rename_verify_format.stderr  test_rename_enable.stderr  test_rename_garbage.rs  test_rename_garbage.stderr  test_rename_meta_name_value.rs  (+9 more)
tests/verify/: expected_fn.rs  expected_fn.stderr  simple_verify.rs  unexpected_lit.rs  unexpected_lit.stderr  unexpected_meta.rs  unexpected_meta.stderr
