[package]
name = "shorthand"
version = "0.1.0"
authors = ["Luro02 <24826124+Luro02@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "full", "extra-traits" ] }
quote = "1.0"
darling = "0.10"
indexmap = "1.3"
from_map = { path = "from_map" }

[dev-dependencies]
trybuild = "1.0"
pretty_assertions = "0.6"
static_assertions = "1.1"

[[test]]
name = "tests"
path = "tests/progress.rs"
