[package]
name = "shorthand"
version = "0.1.0"
authors = ["Luro02 <24826124+Luro02@users.noreply.github.com>"]
edition = "2018"
description = "A proc_macro to derive getter and setter for structs"
repository = "https://github.com/Luro02/shorthand"
readme = "readme.md"
license = "MIT OR Apache-2.0"
keywords = ["getter", "setter"]
categories = ["Procedural macro helpers"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "extra-traits" ] }
quote = "1.0"
from_map = { path = "from_map" }

[dev-dependencies]
trybuild = "1.0"
pretty_assertions = "0.6"

[[test]]
name = "tests"
path = "tests/progress.rs"
