[package]
name = "shorthand"
version = "0.1.1"
authors = ["Luro02 <24826124+Luro02@users.noreply.github.com>"]
edition = "2018"
description = "A proc_macro to derive getter and setter for structs"
repository = "https://github.com/Luro02/shorthand"
readme = "readme.md"
license = "MIT OR Apache-2.0"
keywords = ["getter", "setter"]
categories = ["Procedural macro helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0", features = [ "extra-traits" ] }
quote = "1.0"
from_map = { path = "from_map", version = "0.1.0" }

[dev-dependencies]
trybuild = "1.0"
pretty_assertions = "0.7"
version-sync = "0.8"

[[test]]
name = "tests"
path = "tests/progress.rs"

[package.metadata.docs.rs]
all-features = true
